Revise README for LBMS 4.0 updates
Updated project version to LBMS 4.0 and revised features and tech stack details.